--- a/Bag Of Words .ipynb
+++ b/Bag Of Words .ipynb
@@ -366,8 +366,8 @@
     "    After_Sub = re.sub(\"[^a-zA-Z]\", \" \", Data[\"Message\"][i])\n",
     "    After_Sub = After_Sub.lower()\n",
     "    After_Sub = After_Sub.split()\n",
-    "    After_Sub = [Lemmatizer.lemmatize(word) for word in After_Sub if not word in Stop_Words]\n",
-    "    After_Sub = \" \".join(After_Sub)\n",
+    "    Lemmatized = [Lemmatizer.lemmatize(word) for word in After_Sub if not word in Stop_Words]\n",
+    "    After_Sub = \" \".join(Lemmatized)\n",
     "    Messages.append(After_Sub)\n",
     "    "
    ]
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "1a92cbd6",
    "metadata": {},
    "outputs": [],
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "f145803e",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1509,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], shape=(5572, 2000))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,6 +1517,14 @@
    "source": [
     "BOW"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a11d69ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
